# agentskunk

./: .env.example  .gitignore  .plan.md  AGENT.md  AGENTS.md  Dockerfile  README.md  TODO.md  agent.py  api.py  cli.py  docker-entrypoint.sh  env.example  guardrails.py  package-lock.json  pyproject.toml  state.py
agent/: __init__.py  auxiliary_client.py  context_compressor.py  model_metadata.py
compression/: __init__.py  context_compressor.py
plugins/example_plugin/: __init__.py
prompts/: system_prompt.md
scripts/: test_compression_manual.py  verify.py
tests/: test_api.py  test_auxiliary_client.py  test_cli_compression.py  test_cli_integration.py  test_compression_edge_cases.py  test_compressor.py  test_hitl.py  test_model_metadata.py  test_tools.py
tools/: __init__.py  bash_tool.py  file_tool.py  google_search_tool.py  registry.py  session_tool.py  weather_tool.py  web_fetch_tool.py  web_search_tool.py
tools/memory/: holographic.py  memory_tool.py  retrieval.py  store.py
