[project]
name = "skunkagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-openai",
    "langgraph",
    "uvicorn",
    "fastapi",
    "pydantic",
    "openai>=2.32.0",
    "run-py>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "mypy>=1.20.0",
    "bandit>=1.7.0",
    "pytest>=7.0.0",
    "pytest-json-report>=1.4.0",
]
