[project]
name = "skunkagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn>=0.24.0,<0.25.0",
    "fastapi",
    "pydantic",
    "openai>=2.32.0",
    "run-py>=3.0.0",
    "python-dotenv>=1.0.0",
    "duckduckgo-search>=8.1.1",
    "ddgs>=9.14.2",
    "ipython>=9.13.0",
    "requests>=2.33.1",
    "beautifulsoup4>=4.14.3",
    "markdownify>=1.2.2",
    "llm-guard>=0.3.0,<0.4.0",
    "hexdump>=3.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "mypy>=1.20.0",
    "bandit>=1.7.0",
    "pytest>=7.0.0",
    "pytest-json-report>=1.4.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-json-report>=1.5.0",
    "ruff>=0.15.12",
]
